# PyAgent

./: .codeqlignore  .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  MIGRATION.md  README.md  _git_setup.ps1  check_pydantic_versions.py  check_rust_core.py  conftest.py  flm-test-llama.py  hermes_integration_engine.py  idea_merger_engine.py  idea_synthesizer_engine.py  idea_tracker_integration.py  ideas_backlog.json  ideas_backlog_v2.json  implementation_progress.json  launch_enhanced_mega_execution.py  launch_mega_execution.py  mega_executor.sh  memory_config.json  mypy-strict-lane.ini  numpy.py  parallel_mega_executor.py  phase2_executor.py  planned.md  project_generator.py  pyproject.toml  pytest.ini  real_implementation_engine.py  requirements-ci.txt  requirements.txt  run_phase2_cycle.sh  setup_postgresql_memory.py  simple_mega_executor.py  synthesize_200k_ideas.py  verification_core.py
.cleanup_archive/: debug_network_utils.py.bak  debug_phase_20_21.py.bak  debug_swarm.py.bak  get-pip.py  get-pip.py.bak  stash.patch  test_interface_scan.py.bak  test_network.py.bak  test_ollama_access.py.bak  test_resilience_community.py.bak  test_sdk_v2_2.py.bak
.github/: PULL_REQUEST_TEMPLATE.md
.maturing/: _rust_locations.json
advanced_reasoning/: beam_search_reasoner.py  cache_manager.py  chain_of_thought.py  confidence_scoring.py  cron_scheduler.py  distributed_consensus.py  distributed_network.py  explainability.py  federated_kg_sync.py  hermes_integration.py  hierarchical_planner.py  (+6 more)
rust_core/runtime/: Cargo.toml
rust_core/runtime/src/: lib.rs
(+712374 files in other folders)
